added attendence button

--- a/index.html
+++ b/index.html
@@ -39,23 +39,13 @@
                 So come if you dare, for tricks and treats,<br>
                 At our Halloween party, where fun never retreats!<br>
             </p>
+
+            <a href="https://forms.gle/tzuPqEP31dLy64yL7"><button class="btn">Confirm attendence here!</button></a> 
         </section>
 
         <footer class="footer">
             <p>Looking forward to seeing you! 👻</p>
         </footer>
     </div>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
 </body>
 </html>
